# rally-scanner

./: .dockerignore  .env.example  .gitignore  =14.0  Dockerfile  Makefile  PYTHON_STANDARDS.md  Procfile  README.md  STANDARDS.md  THEORY.md  backtest.py  backtest_universe.py  calibrate.py  config.py  data.py  features.py  hmm.py  labels.py  main.py  model.py  nixpacks.toml  optimize.py  persistence.py  positions.py  pyproject.toml  railway.toml  requirements.txt  retrain.py  scanner.py  start.sh  trading.py  universe.py
.github/workflows/: simulate.yml
memory/: MEMORY.md  db_migration.md
scripts/: dashboard.py  experiment_cooldown.py  experiment_filters.py  holding_period_sweep.py  import_alpaca_positions.py  migrate_system_state.py  orchestrator.py  profit_lock_sweep.py  run_discord.py  setup_env.py  simulate.py  sweep_common.py  test_all.py  test_exits.py  test_helpers.py  test_trade.py  tp_time_sweep.py
src/: api.py  app.py  config.py  log.py  monitoring.py  utils.py
src/backtest/: __init__.py  common.py  optimize.py  universe_bt.py
src/bot/: __init__.py  alpaca_executor.py  claude_agent.py  discord_bot.py  discord_db.py  notify.py
src/config/: __init__.py  params.py
src/core/: calibrate.py  data.py  features.py  hmm.py  labels.py  model.py  persistence.py  train.py  universe.py
src/db/: __init__.py  conversations.py  events.py  ml_stores.py  models.py  pool.py  portfolio.py  positions.py  scan_results.py  schema.py  signal_queue.py  trades.py  universe.py  users.py
src/integrations/: __init__.py
src/live/: __init__.py  main.py  retrain.py  scanner.py
src/market_rally.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pipeline/: __init__.py  retrain.py  scan_display.py  scan_parallel.py  scan_worker.py  scanner.py
src/rally/: __init__.py  alpaca_executor.py  backtest_universe.py  calibrate.py  claude_agent.py  config.py  data.py  discord_bot.py  discord_db.py  features.py  hmm.py  labels.py  log.py  main.py  model.py  notify.py  optimize.py  persistence.py  portfolio.py  positions.py  regime_monitor.py  retrain.py  risk_manager.py  scanner.py  trading.py  universe.py
src/rally_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/services/: __init__.py  _helpers.py  async_tasks.py  portfolio.py  queries.py  system.py  trades.py  trading_ops.py
src/simulation/: runner.py  scenarios.py
src/trading/: __init__.py  alpaca_executor.py  broker_sync.py  engine.py  events.py  housekeeping.py  intraday.py  portfolio.py  position_exits.py  position_sync.py  positions.py  queue.py  regime_monitor.py  risk_evaluation.py  risk_execution.py  risk_manager.py  scheduler.py  scheduler_actions.py  scheduler_exec.py  scheduler_loops.py  scheduler_ops.py  scheduler_prepare.py  scheduler_scans.py  scheduler_state.py  scheduler_stream.py  signals.py  updates.py
tests/: conftest.py  test_adaptive.py  test_agent_tools.py  test_alert_engine.py  test_alpaca_executor.py  test_calibrate.py  test_config.py  test_data.py  test_discord_db.py  test_discord_embeds.py  test_execution_safety.py  test_features.py  test_get_price.py  test_hmm.py  test_labels.py  test_ml_pipeline.py  test_notify.py  test_portfolio.py  test_position_consistency.py  test_position_sync.py  test_positions.py  test_price_alerts.py  test_regime_monitor.py  test_retrain.py  test_risk_manager.py  test_scanner_pipeline.py  test_scheduler_integrity.py  test_signal_safety.py  test_stream.py  test_trading.py
tests/db/: test_discord_db.py  test_portfolio.py  test_position_consistency.py
(+130 files in other folders)
