[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rally-scanner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "yfinance>=0.2.30",
    "scikit-learn>=1.3",
    "hmmlearn>=0.3",
    "lxml>=4.9",
    "joblib>=1.3",
    "pyarrow>=14.0",
    "python-dotenv>=1.0",
    "anthropic>=0.18.0",
    "pydantic>=2.0",
    "psycopg2-binary>=2.9",
    "discord.py>=2.3",
    "aiohttp>=3.9",
    "alpaca-py>=0.29",
    "mcp>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "G", "W"]
ignore = [
    "E402",  # matplotlib.use("Agg") requires imports after call
    "B008",  # function call in default argument (used in Pydantic validators)
]

[tool.ruff.lint.per-file-ignores]
"src/live/main.py" = ["I001"]
"src/backtest/optimize.py" = ["I001"]
"src/backtest/universe_bt.py" = ["I001"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
